# stlviewer

./: .gitignore  CMakeLists.txt  README.md  claude_task.md  main.py  requirements.txt
src/: app.c  app.h  main.c  math3d.h  renderer.c  renderer.h  stl.c  stl.h
thumbnailer/: CMakeLists.txt  Makefile  cmake_install.cmake  stl.thumbnailer
thumbnailer/src/: main.c  png_write.c  png_write.h  render.c  render.h
